Feature/clean swipe func (#98)
* - added repo metod, as well as api endpoint, to get the id of all liked projects on azureToken parameter (tested as well)
-added a state container - a class - in which it holds shared data between the swipe and navmenu pages. the navmenu listens to changes, and re renders the page pased on changes to likedProjects.
- state container added as singleton service.

* - minor changes

--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -2,6 +2,7 @@
 @inject HttpClient Http
 @using System.Security.Claims
 @inject AuthenticationStateProvider AuthenticationStateProvider;
+@inject ProjectStateChanged projectChanged;
 
 
 
@@ -61,13 +62,17 @@ else
 
     private int _i = 10;
     private int _idCounter = 0;
-    private ProjectDetailsDto[] _projects = null!;
-    private List<ProjectDetailsDto> _likedProjects; 
+
+
+    private ProjectDetailsDto[]? _projects;
+
+    private List<int> _likedProjectIds; //This is only used to mimic the database collection of saved projects, st. we dont have to do unnecessary API calls. 
+
+
     private ProjectDetailsDto _lastProject;
     private ProjectDetailsDto _currentProject;
     private ClickType _lastClick;
     private ClaimsPrincipal? _user;
-    private IEnumerable<Claim>? _claims;
     private string? _aToken;
     private string _keywordString;
 
@@ -75,23 +80,24 @@ else
     {
         try
         {
-            var projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]>($"/api/Keyword/{keyword}");
-            if (projects != null) _projects = projects;
-            _likedProjects = new List<ProjectDetailsDto>();
+
+            _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]>($"/api/Keyword/{keyword}"); //all projects containing the specified keyword
+
             _user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
-            _claims = _user.Claims;
             _aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
+            _likedProjectIds = await Http.GetFromJsonAsync<List<int>>($"/api/Account/likedProduct/{_aToken}"); //will return an empty list, if found no saved projects for that user.
+            
             if (_projects != null)
             {
-                _currentProject = _projects.First();
+                _currentProject = _projects[0];
                 _keywordString = getKeyWords();
+                _lastClick = ClickType.Rewatch;
             }
         }
         catch (AccessTokenNotAvailableException e)
         {
             e.Redirect();
         }
-
     }
 
     private enum ClickType
@@ -103,48 +109,69 @@ else
 
     private async void CheckClick(ClickType s)
     {
-        if (s == ClickType.Like) //vi skal lave check på status endpoint kald sender tilbage, så vi kan gøre noget alt efter det. så vi ik bare fortsætter midnless
+        if (s == ClickType.Like) //vi skal lave check på status endpoint kald sender tilbage, så vi kan sende notifikation baseret på det
         {
-            if (!_likedProjects.Contains(_currentProject))
+            if (!_likedProjectIds.Contains(_currentProject.Id))
             {
-                _likedProjects.Add(_currentProject);
-                await Http.PostAsJsonAsync($"api/Account/{_aToken}", _currentProject.Title);
+                await Http.PostAsJsonAsync($"api/Account/{_aToken}", _currentProject.Title); //vil måske gerne lave om til den også får et id
+                _likedProjectIds.Add(_currentProject.Id);
+                projectChanged.AddSavedProjects(_currentProject.Title);
+                //ShowNotification("Project added!");
             }
-            //ShowNotification("Project added!");
-            _idCounter++;
-            _lastProject = _currentProject;
-            _currentProject = _projects[_idCounter % _projects.Length];
+            
+            if (_idCounter != _projects.Length - 1)
+            {
+                _idCounter++;
+            }
+            
             _lastClick = ClickType.Like;
+            
         }
-        if (s == ClickType.Rewatch)
+        else if (s == ClickType.Rewatch)
         {
-            
-             //lav metode der ved initialize henter liked projects, så vi kan se om det er nødvendigt med api kald
-            
-            //_likedProjects.Remove(_currentProject);
             if (_lastClick == ClickType.Like)
             {
-                await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", _lastProject.Title);
+                if (_likedProjectIds.Contains(_lastProject.Id))
+                {
+                    await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", _lastProject.Title);
+                    _likedProjectIds.Remove(_lastProject.Id);
+                    projectChanged.RemoveSavedProjects(_lastProject.Title);
+                }
             }
-
-            if (_idCounter != 0) //scuffed?
+            if (_idCounter != 0) //scuffed? måske lidt. Men vi kan lave samme check, og bare give en notification, at der ikke er flere projekter bagi. "you have either rewatches all projects, or you havent liked/denied any yet"
             {
                 _idCounter--;
             }
-            
-            _currentProject = _projects[(_idCounter) % _projects.Length];
             _lastClick = ClickType.Rewatch;
         }
-        if (s == ClickType.Dislike)
+        else if (s == ClickType.Dislike)
         {
-            //ogs tjek om det nuværende er i liked
-            await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", _currentProject.Title);
-            _idCounter++;
-            _lastProject = _currentProject;
-            _currentProject = _projects[(_idCounter) % _projects.Length];
+            if (_likedProjectIds.Contains(_currentProject.Id))
+            {
+               await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", _currentProject.Title);
+                _likedProjectIds.Remove(_currentProject.Id);
+                projectChanged.RemoveSavedProjects(_currentProject.Title);
+            }
+            if (_idCounter != _projects.Length - 1)
+            {
+                _idCounter++;
+            }
             _lastClick = ClickType.Dislike;
         }
+        
+        if (_idCounter != 0)
+        {
+           _lastProject = _projects[_idCounter - 1]; 
+        }
+        else
+        {
+            _lastProject = _projects[0];
+        }
+        
+        _currentProject = _projects[_idCounter % _projects.Length]; //burde ik være nødvendigt med modulo længere
+
         _keywordString = getKeyWords();
+
         await InvokeAsync(StateHasChanged);
     }
 
@@ -156,6 +183,7 @@ else
 
         return keywords;
     }
+    
 
     /*private void ShowNotification(string message)
     {
