fix after conflicts

--- a/ProjectBank/Client/Pages/Browse.razor
+++ b/ProjectBank/Client/Pages/Browse.razor
@@ -40,4 +40,9 @@
     {
         navigationManager.NavigateTo("swipe/"+keyword);
     }
+
+    private void redirectToSwipeAllPage()
+    {
+        navigationManager.NavigateTo("swipe/all");
+    }
 }
