--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -39,7 +39,8 @@ else
                 <br/>
                 <hr/>
                 <br/>
-                <textarea class="project_keywords" readonly="readonly">Keywords: @_keywordString</textarea>
+                <textarea class="project_keywords" readonly="readonly">Keywords: @_keywordString
+Degree: @_currentProject.Degree</textarea>
             </div>
         </div>
     </div>
@@ -60,7 +61,7 @@ else
 @code
 {
     [Parameter]
-    public string? keyword { get; set; }
+    public string? keyword { get; set; } //vi skal have ekstra paramter - en int nok bare, 3 forskellige
 
     private int _i = 10;
     private int _idCounter = 0;
@@ -77,6 +78,7 @@ else
     private ClaimsPrincipal? _user;
     private string? _aToken;
     private string _keywordString;
+    
 
     protected override async Task OnInitializedAsync()
     {
@@ -84,6 +86,8 @@ else
         {
 
             _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]>($"/api/Keyword/{keyword}"); //all projects containing the specified keyword
+            //vi laver en metode ekstra til at få type med, HVIS IKKE ALLE 3 ER SELECTED, så bliver det bare vores _projects. ez
+            
 
             _user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
             _aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
@@ -202,7 +206,7 @@ else
 
         return keywords;
     }
-    
+
 
     private void ShowNotification(string message, int type)
     {
