--- a/ProjectBank/Client/Shared/MainLayout.razor.css
+++ b/ProjectBank/Client/Shared/MainLayout.razor.css
@@ -78,5 +78,6 @@ main {
     .top-row, article {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
+        overflow-x: hidden;
     }
 }
