Feature/browse on type (#110)
* - degree

* - repo

* - get project by keyword and degree

* - tested ReadAllProjectsWithKeywordAndDegreeAsync as repo test (forgot TDD ups.. but we back on track yall)

* - an extra test on read projects with keyword and degree.

* - tested and added controller GET endpoint for the ReadAllProjectsWithKeywordAndDegreeAsync method of the keyword repo

* - fixed routing on new controller method
- created integration tests for the controller method as well.

* - removed the radzen checkbox, as it didnt work in browse. Benjamin is creating some that works.

* - fixed test for accessing projects by keyword and degree.
- added an additional Degree option: Unspecified. we use this as a default parameter value in the repo method.

--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -39,7 +39,8 @@ else
                 <br/>
                 <hr/>
                 <br/>
-                <textarea class="project_keywords" readonly="readonly">Keywords: @_keywordString</textarea>
+                <textarea class="project_keywords" readonly="readonly">Keywords: @_keywordString
+Degree: @_currentProject.Degree</textarea>
             </div>
         </div>
     </div>
@@ -66,7 +67,6 @@ else
     private int _idCounter = 0;
 
     private IList<ProjectDetailsDto> _projects;
-
     private List<int> _likedProjectIds; //This is only used to mimic the database collection of saved projects, st. we dont have to do unnecessary API calls. 
 
     private ProjectDetailsDto _lastProject;
